<resources>
    <string name="app_name">Soncur</string>
    <string name="welcome_back">Welcome Back testing</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="a_sound_story">a sound story</string>
    <string name="enter_email_i_d">Enter email i’d</string>
    <string name="enter_password">Enter password</string>
    <string name="signup">Signup</string>
    <string name="signup_to_continue">Signup to continue</string>
    <string name="welcome">Welcome</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="rohan_s_ring">Rohan’s Ring</string>
    <string name="_925_silver">925 Silver\nRohan’s Gift to sayontani</string>
    <string name="non_personal">Non Personal</string>
    <string name="personal">Personal</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>